<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/sixty_four_dp"
            android:layout_height="@dimen/sixty_four_dp"
            android:contentDescription="@string/event_image"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twenty_one_sp"
                android:typeface="sans"
                android:layout_marginBottom="@dimen/eight_dp"
                android:textStyle="bold"
                android:text="@string/title" />

            <TextView
                android:id="@+id/date"
                android:textSize="@dimen/seventeen_sp"
                android:layout_width="match_parent"
                android:typeface="sans"
                android:layout_height="wrap_content"
                android:text="@string/subtitle" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>